# api_test_automation

./: README.md  pyproject.toml
responses/: browse_page_0.json
src/: neows_client.py
tests/: conftest.py  tests_neows_api.py
